--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,16 +8,23 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@bogeychan/elysia-logger": "^0.1.4",
     "@elysiajs/cors": "^1.1.1",
+    "@elysiajs/swagger": "^1.1.5",
     "@neondatabase/serverless": "^0.9.5",
-    "drizzle-orm": "^0.33.0",
+    "better-auth": "^0.4.12-beta.5",
+    "drizzle-orm": "^0.35.1",
     "elysia": "latest",
+    "pg": "^8.13.0",
+    "pino-pretty": "^11.3.0",
+    "pino-roll": "^2.1.0",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.10",
     "bun-types": "latest",
-    "drizzle-kit": "^0.24.2"
+    "drizzle-kit": "^0.26.2"
   },
   "module": "src/index.js"
 }
