--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,28 +10,29 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.0",
-		"@radix-ui/react-toast": "^1.2.1",
-		"@tabler/icons-react": "^3.17.0",
+		"@radix-ui/react-toast": "^1.2.2",
+		"@tabler/icons-react": "^3.21.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.5.4",
+		"framer-motion": "^11.11.11",
+		"geist": "^1.3.1",
 		"lucide-react": "^0.441.0",
 		"next": "14.2.11",
-		"react": "^18",
-		"react-dom": "^18",
-		"react-hook-form": "^7.53.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.53.1",
 		"react-query": "^3.39.3",
-		"tailwind-merge": "^2.5.2",
+		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
-		"typescript": "^5",
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"eslint": "^8",
+		"typescript": "^5.6.3",
+		"@types/node": "^20.17.4",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"postcss": "^8.4.47",
+		"tailwindcss": "^3.4.14",
+		"eslint": "^8.57.1",
 		"eslint-config-next": "14.2.11"
 	}
 }
