--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,25 @@
 version: "3"
 services:
   postgres:
-    image: postgres:14-alpine
+    image: postgres:17-alpine
+    container_name: 'postgres'
     ports:
       - 5432:5432
+    volumes:
+      - ~/apps/postgres:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: webapp_dev
+      POSTGRES_DB: app
+      POSTGRES_USER: user
       POSTGRES_HOST_AUTH_METHOD: trust
+  rabbitmq:
+    image: rabbitmq:4-management-alpine
+    container_name: 'rabbitmq'
+    ports:
+        - 5672:5672
+        - 15672:15672
+    volumes:
+        - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+        - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
   redis:
     image: redis:6.2.5-alpine
 
@@ -16,23 +29,26 @@ services:
       - ""
       - backend
     build:
-      context: .
-      dockerfile: ./docker/dev.backend.Dockerfile
-    env_file: .env.local
+      context: ./apps/backend
+      dockerfile: dev.Dockerfile
+    env_file: apps/backend/.env
     volumes:
       - ./apps/backend:/app/apps/backend
       - /app/apps/backend/node_modules
     ports:
       - 4000:4000 
+    depends_on:
+      - postgres
+
   frontend_app:
     container_name: frontend_app
     profiles:
       - ""
       - frontend
     build:
-      context: .
-      dockerfile: ./docker/dev.frontend.Dockerfile
-    env_file: .env.local
+      context: ./apps/frontend
+      dockerfile: dev.Dockerfile
+    env_file: .env
     volumes:
       - ./apps/frontend:/app/apps/frontend
       - /app/apps/frontend/node_modules
