--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-	"name": "customai-webstack",
-	"module": "index.ts",
-	"type": "module",
-	"scripts": {
-		"dev": "concurrently -n 'backend,frontend' -c '#007755,#2f6da3' 'cd apps/backend && bun dev' 'cd apps/frontend && bun --bun run dev'",
-		"dev:backend": "concurrently -n 'backend' -c '#007755' 'cd apps/backend && bun dev'",
-		"dev:frontend": "concurrently -n 'frontend' -c '#2f6da3' 'cd apps/frontend && bun --bun run dev'",
-		"typecheck": "bunx --bun tsc",
-		"lint": "biome lint --skip=suspicious/noExplicitAny .",
-		"lint:fix": "biome lint --write --skip=suspicious/noExplicitAny .",
-		"format": "biome format .",
-		"format:fix": "biome format --write .",
-		"prepare": "husky"
-	},
-	"workspaces": ["packages/*"],
-	"devDependencies": {
-		"@biomejs/biome": "1.9.1",
-		"@types/bun": "latest",
-		"husky": "^9.1.6",
-		"lint-staged": "^15.2.10"
-	},
-	"peerDependencies": {
-		"typescript": "^5.0.0"
-	},
-	"dependencies": {
-		"concurrently": "^9.0.1"
-	}
+  "name": "customai-webstack",
+  "module": "index.ts",
+  "type": "module",
+  "scripts": {
+    "dev": "concurrently -n 'backend,frontend' -c '#007755,#2f6da3' 'cd apps/backend && bun dev' 'cd apps/frontend && bun --bun run dev'",
+    "typecheck": "bunx --bun tsc",
+    "lint": "biome lint --skip=suspicious/noExplicitAny .",
+    "lint:fix": "biome lint --write --skip=suspicious/noExplicitAny .",
+    "format": "biome format .",
+    "format:fix": "biome format --write .",
+    "prepare": "husky"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@biomejs/biome": "1.9.1",
+    "@types/bun": "latest",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "concurrently": "^9.0.1"
+  }
 }
