chore: fix package

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -21,6 +21,8 @@ POSTGRES_PASSWORD=your_postgres_password
 # RabbitMQ Configuration
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin
 
 # Redis Configuration
 REDIS_HOST=redis
