--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,14 @@ services:
     image: rabbitmq:4-management-alpine
     container_name: 'rabbitmq'
     ports:
-        - 5672:5672
-        - 15672:15672
+      - 5672:5672
+      - 15672:15672
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: admin
     volumes:
-        - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
-        - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+      - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+      - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
   redis:
     image: redis:6.2.5-alpine
 
@@ -33,7 +36,7 @@ services:
       dockerfile: dev.Dockerfile
     env_file: apps/backend/.env
     volumes:
-      - ./apps/backend:/app/apps/backend
+      - ./apps/backend:/app
       - /app/apps/backend/node_modules
     ports:
       - 4000:4000 
@@ -48,9 +51,9 @@ services:
     build:
       context: ./apps/frontend
       dockerfile: dev.Dockerfile
-    env_file: .env
+    env_file: apps/frontend/.env
     volumes:
-      - ./apps/frontend:/app/apps/frontend
+      - ./apps/frontend:/app
       - /app/apps/frontend/node_modules
       - /app/apps/frontend/.next
     ports:
