--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "concurrently -n 'backend,frontend' -c '#007755,#2f6da3' 'cd apps/backend && bun dev' 'cd apps/frontend && bun --bun run dev'",
+    "dev": "concurrently -n 'backend,frontend' -c '#007755,#2f6da3' 'cd apps/backend && bun dev' 'cd apps/frontend && pnpm run dev'",
     "typecheck": "bunx --bun tsc",
     "lint": "biome lint --skip=suspicious/noExplicitAny .",
     "lint:fix": "biome lint --write --skip=suspicious/noExplicitAny .",
