--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
       - 4000:4000 
     depends_on:
       - postgres
+      - rabbitmq
+      - redis
 
   frontend_app:
     container_name: frontend_app
