feat: signin & signup

--- a/biome.json
+++ b/biome.json
@@ -32,6 +32,9 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "suspicious": {
+        "noExplicitAny": "off"
+      },
       "a11y": {
         "noSvgWithoutTitle": "off",
         "useButtonType": "off",
