--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,17 +11,23 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@better-fetch/fetch": "^1.1.12",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "@tabler/icons-react": "^3.21.0",
     "@tanstack/react-query": "^5.59.19",
     "@tanstack/react-query-devtools": "^5.59.19",
+    "axios": "^1.7.7",
     "better-auth": "^0.7.3-beta.2",
     "biome": "^0.2.2",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +35,7 @@
     "framer-motion": "^11.11.11",
     "geist": "^1.3.1",
     "lucide-react": "^0.441.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.11",
     "next-intl": "^3.24.0",
     "next-themes": "^0.4.3",
