--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@bogeychan/elysia-logger": "^0.1.4",
     "@elysiajs/cors": "^1.1.1",
+    "@elysiajs/static": "^1.1.1",
     "@elysiajs/swagger": "^1.1.5",
     "@neondatabase/serverless": "^0.9.5",
     "amqplib": "^0.10.4",
@@ -22,6 +23,7 @@
     "drizzle-typebox": "^0.1.1",
     "elysia": "latest",
     "pg": "^8.13.1",
+    "pino-elasticsearch": "^8.1.0",
     "pino-pretty": "^11.3.0",
     "pino-roll": "^2.2.0",
     "postgres": "^3.4.5",
