--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@better-fetch/fetch": "^1.1.12",
     "@hookform/resolvers": "^3.9.1",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.0.3",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -27,11 +30,13 @@
     "@tabler/icons-react": "^3.21.0",
     "@tanstack/react-query": "^5.59.19",
     "@tanstack/react-query-devtools": "^5.59.19",
+    "@types/mdx": "^2.0.13",
     "axios": "^1.7.7",
     "better-auth": "^0.7.3-beta.2",
     "biome": "^0.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.11.11",
     "geist": "^1.3.1",
     "lucide-react": "^0.441.0",
