--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -13,6 +13,7 @@ APP_PORT=4000
 
 # Database Configuration
 POSTGRES_HOST=postgres
+POSTGRES_LOCAL_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=user
