--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       POSTGRES_DB: app
       POSTGRES_USER: user
+      POSTGRES_PASSWORD: your_postgres_password
       POSTGRES_HOST_AUTH_METHOD: trust
   rabbitmq:
     image: rabbitmq:4-management-alpine
