--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -46,7 +46,7 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.441.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.11",
+    "next": "^14.2.23",
     "next-intl": "^3.24.0",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
@@ -60,7 +60,8 @@
     "storybook": "^8.4.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
