--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -29,3 +29,9 @@ RABBITMQ_PASSWORD=admin
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB_INDEX=0
+
+# S3 Bucket
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
+AWS_REGION=us-east-1
+S3_ENDPOINT=http://localstack:4566
