--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,6 +28,7 @@
 		"pino-roll": "^2.2.0",
 		"postgres": "^3.4.5",
 		"redis": "^4.7.0",
+		"sharp": "^0.33.5",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
