--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: your_postgres_password
       POSTGRES_HOST_AUTH_METHOD: trust
+      
   rabbitmq:
     image: rabbitmq:4-management-alpine
     container_name: 'rabbitmq'
@@ -24,9 +25,11 @@ services:
     volumes:
       - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
       - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+
   redis:
     container_name: 'redis'
     image: redis:6.2.5-alpine
+
   elasticsearch:
     container_name: 'elasticsearch'
     image: elasticsearch:8.16.2
@@ -40,17 +43,34 @@ services:
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
+
   kibana:
     image: kibana:8.16.2
     volumes:
       - ./kibana.yml:/usr/share/kibana/config/kibana.yml
     ports:
       - 5601:5601
+
+  localstack:
+    image: localstack/localstack:latest
+    container_name: localstack_main
+    ports:
+      - "4566:4566" 
+      - "4510-4559:4510-4559"  
+    environment:
+      - DOCKER_HOST=unix:///var/run/docker.sock
+      - SERVICES=s3 
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - localstack_data:/tmp/localstack
+
   ai_app:
     container_name: python_ai
     profiles:
       - ""
       - python
+    depends_on:
+      - localstack
     build: 
       context: ./apps/ai-service
       dockerfile: dev.Dockerfile
@@ -74,6 +94,7 @@ services:
     ports:
       - 4000:4000 
     depends_on:
+      - localstack
       - postgres
       - rabbitmq
       - redis
