--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,12 +12,17 @@
   },
   "dependencies": {
     "@better-fetch/fetch": "^1.1.12",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.0.3",
     "@number-flow/react": "^0.5.4",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-context-menu": "^2.2.5",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -48,6 +53,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.11",
     "geist": "^1.3.1",
+    "immer": "^10.1.1",
     "lucide-react": "^0.441.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.23",
@@ -59,6 +65,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
     "react-query": "^3.39.3",
+    "reactflow": "^11.11.4",
     "recharts": "^2.13.2",
     "socket.io-client": "^4.8.1",
     "storybook": "^8.4.1",
