--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -1,7 +1,7 @@
 # Authentication Settings
 BETTER_AUTH_SECRET=zy7YSG2GCtfAIHqZkxz2EhiJs0leXCXD
-BETTER_AUTH_URL=http://localhost:3000
-BETTER_AUTH_TRUSTED_ORIGINS="http://localhost:3000,https://example.com"
+BETTER_AUTH_URL=http://localhost:4000
+BETTER_AUTH_TRUSTED_ORIGINS="http://localhost:3000"
 ENABLE_SWAGGER=true
 
 # Google Client Settings
