--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "bun run --hot src/index.ts",
 		"build": "bun build src/index.ts --target bun --outdir ./dist",
-		"migrate:auth": "bunx @better-auth/cli@latest generate",
+		"generate:auth": "bunx @better-auth/cli@latest generate",
 		"studio": "drizzle-kit studio",
 		"generate": "drizzle-kit generate",
 		"db:setup": "drizzle-kit migrate && bun seed",
@@ -13,14 +13,14 @@
 		"migrate": "drizzle-kit migrate"
 	},
 	"dependencies": {
-		"@bogeychan/elysia-logger": "^0.1.7",
+		"@bogeychan/elysia-logger": "^0.1.8",
 		"@elysiajs/cors": "^1.2.0",
 		"@elysiajs/static": "^1.2.0",
 		"@elysiajs/swagger": "^1.2.0",
 		"@neondatabase/serverless": "^0.9.5",
 		"amqplib": "^0.10.5",
-		"better-auth": "^1.1.11",
-		"drizzle-orm": "^0.35.3",
+		"better-auth": "^1.1.14",
+		"drizzle-orm": "^0.38.4",
 		"drizzle-typebox": "^0.1.1",
 		"elysia": "latest",
 		"pg": "^8.13.1",
@@ -34,9 +34,9 @@
 	},
 	"devDependencies": {
 		"@types/amqplib": "^0.10.6",
-		"@types/pg": "^8.11.10",
+		"@types/pg": "^8.11.11",
 		"bun-types": "latest",
-		"drizzle-kit": "^0.26.2"
+		"drizzle-kit": "^0.30.2"
 	},
 	"module": "src/index.js"
 }
