--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -5,8 +5,8 @@ BETTER_AUTH_TRUSTED_ORIGINS="http://localhost:3000"
 ENABLE_SWAGGER=true
 
 # Google Client Settings
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CLIENT_ID=112233308252-689vfltrabesss2d0denlo3hgjjosviq.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 # Application Settings
 APP_PORT=4000
