--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,12 +1,12 @@
 # Authentication Settings
 BETTER_AUTH_SECRET=zy7YSG2GCtfAIHqZkxz2EhiJs0leXCXD
-BETTER_AUTH_URL=http://localhost:3000
-BETTER_AUTH_TRUSTED_ORIGINS="http://localhost:3000,https://example.com"
+BETTER_AUTH_URL=http://localhost:4000
+BETTER_AUTH_TRUSTED_ORIGINS="http://localhost:3000"
 ENABLE_SWAGGER=true
 
 # Google Client Settings
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CLIENT_ID=112233308252-689vfltrabesss2d0denlo3hgjjosviq.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 # Application Settings
 APP_PORT=4000
