--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,93 +1,94 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "@better-fetch/fetch": "^1.1.12",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@hookform/resolvers": "^3.9.1",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.0.3",
-    "@number-flow/react": "^0.5.4",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-context-menu": "^2.2.5",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.1",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.1",
-    "@radix-ui/react-toggle-group": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@t3-oss/env-nextjs": "^0.11.1",
-    "@tabler/icons-react": "^3.22.0",
-    "@tanstack/react-query": "^5.59.19",
-    "@tanstack/react-query-devtools": "^5.59.19",
-    "@types/mdx": "^2.0.13",
-    "axios": "^1.7.7",
-    "better-auth": "^0.7.3-beta.2",
-    "biome": "^0.2.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "copy-to-clipboard": "^3.3.3",
-    "date-fns": "^3.6.0",
-    "framer-motion": "^11.11.11",
-    "geist": "^1.3.1",
-    "immer": "^10.1.1",
-    "lucide-react": "^0.441.0",
-    "mini-svg-data-uri": "^1.4.4",
-    "next": "^14.2.23",
-    "next-intl": "^3.24.0",
-    "next-themes": "^0.4.3",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-dropzone": "^14.3.5",
-    "react-hook-form": "^7.53.1",
-    "react-query": "^3.39.3",
-    "reactflow": "^11.11.4",
-    "recharts": "^2.13.2",
-    "socket.io-client": "^4.8.1",
-    "storybook": "^8.4.1",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.2",
-    "@storybook/addon-essentials": "^8.4.1",
-    "@storybook/addon-interactions": "^8.4.1",
-    "@storybook/addon-onboarding": "^8.4.1",
-    "@storybook/blocks": "^8.4.1",
-    "@storybook/nextjs": "^8.4.1",
-    "@storybook/react": "^8.4.1",
-    "@storybook/test": "^8.4.1",
-    "@types/node": "^20.17.5",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
-  }
+	"name": "frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"dev:fast": "next dev --turbo",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
+	},
+	"dependencies": {
+		"@better-fetch/fetch": "^1.1.12",
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/sortable": "^10.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
+		"@hookform/resolvers": "^3.9.1",
+		"@mdx-js/loader": "^3.1.0",
+		"@mdx-js/react": "^3.1.0",
+		"@next/mdx": "^15.0.3",
+		"@number-flow/react": "^0.5.4",
+		"@radix-ui/react-checkbox": "^1.1.3",
+		"@radix-ui/react-collapsible": "^1.1.1",
+		"@radix-ui/react-context-menu": "^2.2.5",
+		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-navigation-menu": "^1.2.1",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-progress": "^1.1.1",
+		"@radix-ui/react-scroll-area": "^1.2.2",
+		"@radix-ui/react-select": "^2.1.4",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-switch": "^1.1.2",
+		"@radix-ui/react-tabs": "^1.1.2",
+		"@radix-ui/react-toast": "^1.2.2",
+		"@radix-ui/react-toggle": "^1.1.1",
+		"@radix-ui/react-toggle-group": "^1.1.1",
+		"@radix-ui/react-tooltip": "^1.1.3",
+		"@t3-oss/env-nextjs": "^0.11.1",
+		"@tabler/icons-react": "^3.22.0",
+		"@tanstack/react-query": "^5.59.19",
+		"@tanstack/react-query-devtools": "^5.59.19",
+		"@types/mdx": "^2.0.13",
+		"axios": "^1.7.7",
+		"better-auth": "^0.7.5",
+		"biome": "^0.2.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"copy-to-clipboard": "^3.3.3",
+		"date-fns": "^3.6.0",
+		"framer-motion": "^11.11.11",
+		"geist": "^1.3.1",
+		"immer": "^10.1.1",
+		"lucide-react": "^0.441.0",
+		"mini-svg-data-uri": "^1.4.4",
+		"next": "^14.2.23",
+		"next-intl": "^3.24.0",
+		"next-themes": "^0.4.3",
+		"react": "^18.3.1",
+		"react-day-picker": "^8.10.1",
+		"react-dom": "^18.3.1",
+		"react-dropzone": "^14.3.5",
+		"react-hook-form": "^7.53.1",
+		"react-query": "^3.39.3",
+		"reactflow": "^11.11.4",
+		"recharts": "^2.13.2",
+		"socket.io-client": "^4.8.1",
+		"storybook": "^8.4.1",
+		"tailwind-merge": "^2.5.4",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8",
+		"zustand": "^5.0.3"
+	},
+	"devDependencies": {
+		"@chromatic-com/storybook": "^3.2.2",
+		"@storybook/addon-essentials": "^8.4.1",
+		"@storybook/addon-interactions": "^8.4.1",
+		"@storybook/addon-onboarding": "^8.4.1",
+		"@storybook/blocks": "^8.4.1",
+		"@storybook/nextjs": "^8.4.1",
+		"@storybook/react": "^8.4.1",
+		"@storybook/test": "^8.4.1",
+		"@types/node": "^20.17.5",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"postcss": "^8.4.47",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3"
+	}
 }
