--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint:fix": "biome lint --write --skip=suspicious/noExplicitAny --skip=security/noDangerouslySetInnerHtml --skip=lint/complexity/noStaticOnlyClass .",
 		"format": "biome format .",
 		"format:fix": "biome format --write .",
+		"generate": "cd apps/backend && bun generate",
+		"migrate": "cd apps/backend && bun migrate",
 		"prepare": "husky"
 	},
 	"workspaces": ["packages/*"],
