--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -57,6 +57,7 @@
 		"immer": "^10.1.1",
 		"lucide-react": "^0.441.0",
 		"mini-svg-data-uri": "^1.4.4",
+		"negotiator": "^1.0.0",
 		"next": "^14.2.23",
 		"next-intl": "^3.24.0",
 		"next-themes": "^0.4.3",
@@ -84,6 +85,7 @@
 		"@storybook/nextjs": "^8.4.1",
 		"@storybook/react": "^8.4.1",
 		"@storybook/test": "^8.4.1",
+		"@types/negotiator": "^0.6.3",
 		"@types/node": "^20.17.5",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
