--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,6 +31,7 @@
 		"postgres": "^3.4.5",
 		"redis": "^4.7.0",
 		"sharp": "^0.33.5",
+		"uuid": "^11.0.5",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
