--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,7 @@
 		"generate:auth": "bunx @better-auth/cli@latest generate",
 		"studio": "drizzle-kit studio",
 		"generate": "drizzle-kit generate",
-		"db:setup": "drizzle-kit migrate && bun seed",
+		"setup": "drizzle-kit migrate && bun seed",
 		"push": "drizzle-kit push",
 		"seed": "bun ./src/infrastructures/database/seed.ts",
 		"migrate": "drizzle-kit migrate"
