--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -36,3 +36,4 @@ AWS_SECRET_ACCESS_KEY=test
 AWS_REGION=us-east-1
 S3_BUCKET_NAME=my-bucket
 S3_ENDPOINT=http://localstack:4566
+S3_DEVELOPMENT_ENDPOINT=http://localhost:4566
