--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
 	"[typescriptreact]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
-	"cSpell.words": ["ILIKE", "presign", "reactflow", "Tresholding"]
+	"cSpell.words": ["dtos", "ILIKE", "presign", "reactflow", "Tresholding"]
 }
