--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,6 +10,7 @@
 		"generate": "drizzle-kit generate",
 		"setup": "drizzle-kit migrate && bun seed",
 		"push": "drizzle-kit push",
+		"clean": "bun ./src/infrastructures/database/clean.ts",
 		"seed": "bun ./src/infrastructures/database/seed.ts",
 		"migrate": "drizzle-kit migrate"
 	},
