feat: `dataset` fetch on frontend and fix index and schema

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,11 +22,12 @@
 		"@elysiajs/static": "^1.2.0",
 		"@elysiajs/swagger": "^1.2.0",
 		"@neondatabase/serverless": "^0.9.5",
+		"@testcontainers/postgresql": "^10.18.0",
 		"amqplib": "^0.10.5",
 		"better-auth": "^1.1.16",
 		"drizzle-kit": "^0.30.4",
 		"drizzle-orm": "^0.38.4",
-		"drizzle-typebox": "^0.1.1",
+		"drizzle-typebox": "^0.3.0",
 		"elysia": "latest",
 		"pg": "^8.13.1",
 		"pino-elasticsearch": "^8.1.0",
