--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -24,6 +24,7 @@ RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_USER=admin
 RABBITMQ_PASSWORD=admin
+RABBITMQ_TRAINING_QUEUE_NAME=training_queue
 
 # Redis Configuration
 REDIS_HOST=redis
@@ -37,3 +38,6 @@ AWS_REGION=us-east-1
 S3_BUCKET_NAME=my-bucket
 S3_ENDPOINT=http://localstack:4566
 S3_DEVELOPMENT_ENDPOINT=http://localhost:4566
+
+# Python Server
+MAX_RETRY_COUNT=3
