--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -45,6 +45,7 @@
 		"@tabler/icons-react": "^3.22.0",
 		"@tanstack/react-query": "^5.59.19",
 		"@tanstack/react-query-devtools": "^5.59.19",
+		"@techstark/opencv-js": "^4.10.0-release.1",
 		"@types/mdx": "^2.0.13",
 		"axios": "^1.7.7",
 		"better-auth": "^0.7.5",
