feat: validate everything when start training

--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -41,4 +41,4 @@ S3_DEVELOPMENT_ENDPOINT=http://localhost:4566
 
 # Python Server
 MAX_RETRY_COUNT=3
-PYTHON_SERVER_URL=http://backend_app:4000
+PYTHON_SERVER_URL=http://127.0.0.1:8000
