feat: fix version

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -74,7 +74,7 @@
 		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.53.1",
 		"react-query": "^3.39.3",
-		"react-window": "^1.8.11",
+		"react-virtuoso": "^4.12.5",
 		"reactflow": "^11.11.4",
 		"recharts": "^2.13.2",
 		"rehype-slug": "^6.0.0",
