fix: improve lib performance

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,49 +1,50 @@
 {
-  "name": "app",
-  "version": "1.0.50",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --hot src/index.ts",
-    "build": "bun build src/index.ts --target bun --outdir ./dist",
-    "generate:auth": "bunx @better-auth/cli@latest generate",
-    "studio": "drizzle-kit studio",
-    "generate": "drizzle-kit generate",
-    "setup": "drizzle-kit migrate && bun seed",
-    "push": "drizzle-kit push",
-    "check": "drizzle-kit check",
-    "up": "drizzle-kit up",
-    "clean": "bun ./src/infrastructures/database/clean.ts",
-    "seed": "bun ./src/infrastructures/database/seed.ts",
-    "migrate": "drizzle-kit migrate"
-  },
-  "dependencies": {
-    "@bogeychan/elysia-logger": "^0.1.8",
-    "@elysiajs/cors": "^1.2.0",
-    "@elysiajs/static": "^1.2.0",
-    "@elysiajs/swagger": "^1.2.0",
-    "@neondatabase/serverless": "^0.9.5",
-    "@testcontainers/postgresql": "^10.18.0",
-    "amqplib": "^0.10.5",
-    "axios": "^1.8.4",
-    "better-auth": "^1.1.16",
-    "drizzle-kit": "^0.30.4",
-    "drizzle-orm": "^0.38.4",
-    "drizzle-typebox": "^0.3.0",
-    "elysia": "latest",
-    "pg": "^8.13.1",
-    "pino-elasticsearch": "^8.1.0",
-    "pino-pretty": "^11.3.0",
-    "pino-roll": "^2.2.0",
-    "postgres": "^3.4.5",
-    "redis": "^4.7.0",
-    "sharp": "^0.33.5",
-    "uuid": "^11.0.5",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@types/amqplib": "^0.10.6",
-    "@types/pg": "^8.11.11",
-    "bun-types": "latest"
-  },
-  "module": "src/index.js"
+	"name": "app",
+	"version": "1.0.50",
+	"scripts": {
+		"test": "bun test",
+		"dev": "bun run --hot src/index.ts",
+		"build": "bun build src/index.ts --target bun --outdir ./dist",
+		"generate:auth": "bunx @better-auth/cli@latest generate",
+		"studio": "drizzle-kit studio",
+		"generate": "drizzle-kit generate",
+		"setup": "drizzle-kit migrate && bun seed",
+		"push": "drizzle-kit push",
+		"check": "drizzle-kit check",
+		"up": "drizzle-kit up",
+		"clean": "bun ./src/infrastructures/database/clean.ts",
+		"seed": "bun ./src/infrastructures/database/seed.ts",
+		"migrate": "drizzle-kit migrate"
+	},
+	"dependencies": {
+		"@bogeychan/elysia-logger": "^0.1.8",
+		"@elysiajs/cors": "^1.2.0",
+		"@elysiajs/static": "^1.2.0",
+		"@elysiajs/swagger": "^1.2.0",
+		"@neondatabase/serverless": "^0.9.5",
+		"@testcontainers/postgresql": "^10.18.0",
+		"amqplib": "^0.10.5",
+		"axios": "^1.8.4",
+		"better-auth": "^1.1.16",
+		"drizzle-kit": "^0.30.4",
+		"drizzle-orm": "^0.38.4",
+		"drizzle-typebox": "^0.3.0",
+		"elysia": "latest",
+		"pg": "^8.13.1",
+		"pino-elasticsearch": "^8.1.0",
+		"pino-pretty": "^11.3.0",
+		"pino-roll": "^2.2.0",
+		"postgres": "^3.4.5",
+		"redis": "^4.7.0",
+		"sharp": "^0.33.5",
+		"uuid": "^11.0.5",
+		"zod": "^3.24.1"
+	},
+	"devDependencies": {
+		"@better-auth-kit/tests": "^0.1.2",
+		"@types/amqplib": "^0.10.6",
+		"@types/pg": "^8.11.11",
+		"bun-types": "latest"
+	},
+	"module": "src/index.js"
 }
