--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,106 +1,116 @@
 {
-	"name": "frontend",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"dev:fast": "next dev --turbo",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
-	},
-	"dependencies": {
-		"@better-fetch/fetch": "^1.1.12",
-		"@dnd-kit/core": "^6.3.1",
-		"@dnd-kit/sortable": "^10.0.0",
-		"@dnd-kit/utilities": "^3.2.2",
-		"@hookform/resolvers": "^3.9.1",
-		"@mdx-js/loader": "^3.1.0",
-		"@mdx-js/react": "^3.1.0",
-		"@next/mdx": "^15.0.3",
-		"@number-flow/react": "^0.5.4",
-		"@radix-ui/react-checkbox": "^1.1.3",
-		"@radix-ui/react-collapsible": "^1.1.1",
-		"@radix-ui/react-context-menu": "^2.2.5",
-		"@radix-ui/react-dialog": "^1.1.4",
-		"@radix-ui/react-dropdown-menu": "^2.1.2",
-		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-navigation-menu": "^1.2.1",
-		"@radix-ui/react-popover": "^1.1.2",
-		"@radix-ui/react-progress": "^1.1.1",
-		"@radix-ui/react-scroll-area": "^1.2.2",
-		"@radix-ui/react-select": "^2.1.4",
-		"@radix-ui/react-separator": "^1.1.0",
-		"@radix-ui/react-slider": "^1.2.3",
-		"@radix-ui/react-slot": "^1.1.2",
-		"@radix-ui/react-switch": "^1.1.2",
-		"@radix-ui/react-tabs": "^1.1.2",
-		"@radix-ui/react-toast": "^1.2.2",
-		"@radix-ui/react-toggle": "^1.1.1",
-		"@radix-ui/react-toggle-group": "^1.1.1",
-		"@radix-ui/react-tooltip": "^1.1.3",
-		"@t3-oss/env-nextjs": "^0.11.1",
-		"@tabler/icons-react": "^3.22.0",
-		"@tanstack/react-query": "^5.59.19",
-		"@tanstack/react-query-devtools": "^5.59.19",
-		"@techstark/opencv-js": "^4.10.0-release.1",
-		"@types/mdx": "^2.0.13",
-		"@types/react-window": "^1.8.8",
-		"axios": "^1.7.7",
-		"better-auth": "^0.7.5",
-		"biome": "^0.2.2",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"copy-to-clipboard": "^3.3.3",
-		"date-fns": "^3.6.0",
-		"fast-deep-equal": "^3.1.3",
-		"framer-motion": "^11.11.11",
-		"geist": "^1.3.1",
-		"gray-matter": "^4.0.3",
-		"immer": "^10.1.1",
-		"lucide-react": "^0.479.0",
-		"nanoid": "^5.1.4",
-		"negotiator": "^1.0.0",
-		"next": "^14.2.23",
-		"next-intl": "^3.24.0",
-		"next-mdx-remote": "^5.0.0",
-		"next-themes": "^0.4.3",
-		"react": "^18.3.1",
-		"react-day-picker": "^8.10.1",
-		"react-dom": "^18.3.1",
-		"react-dropzone": "^14.3.5",
-		"react-hook-form": "^7.53.1",
-		"react-query": "^3.39.3",
-		"react-virtuoso": "^4.12.5",
-		"reactflow": "^11.11.4",
-		"recharts": "^2.13.2",
-		"rehype-slug": "^6.0.0",
-		"socket.io-client": "^4.8.1",
-		"storybook": "^8.4.1",
-		"tailwind-merge": "^2.6.0",
-		"tw-animate-css": "^1.2.4",
-		"zod": "^3.23.8",
-		"zustand": "^5.0.3"
-	},
-	"devDependencies": {
-		"@chromatic-com/storybook": "^3.2.2",
-		"@storybook/addon-essentials": "^8.4.1",
-		"@storybook/addon-interactions": "^8.4.1",
-		"@storybook/addon-onboarding": "^8.4.1",
-		"@storybook/blocks": "^8.4.1",
-		"@storybook/nextjs": "^8.4.1",
-		"@storybook/react": "^8.4.1",
-		"@storybook/test": "^8.4.1",
-		"@tailwindcss/postcss": "^4.0.14",
-		"@types/lodash.debounce": "^4.0.9",
-		"@types/negotiator": "^0.6.3",
-		"@types/node": "^20.17.5",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
-		"postcss": "^8.4.47",
-		"tailwindcss": "^4.0.14",
-		"typescript": "^5.6.3"
-	}
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "dev:fast": "next dev --turbo",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "@better-fetch/fetch": "^1.1.12",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^3.10.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.0.3",
+    "@number-flow/react": "^0.5.4",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-context-menu": "^2.2.5",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@tabler/icons-react": "^3.22.0",
+    "@tanstack/react-query": "^5.59.19",
+    "@tanstack/react-query-devtools": "^5.59.19",
+    "@techstark/opencv-js": "^4.10.0-release.1",
+    "@types/mdx": "^2.0.13",
+    "@types/react-window": "^1.8.8",
+    "axios": "^1.7.7",
+    "better-auth": "^0.7.5",
+    "biome": "^0.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^3.6.0",
+    "fast-deep-equal": "^3.1.3",
+    "framer-motion": "^11.11.11",
+    "geist": "^1.3.1",
+    "gray-matter": "^4.0.3",
+    "immer": "^10.1.1",
+    "lucide-react": "^0.479.0",
+    "nanoid": "^5.1.4",
+    "negotiator": "^1.0.0",
+    "next": "^14.2.23",
+    "next-intl": "^3.24.0",
+    "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.3",
+    "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.54.2",
+    "react-query": "^3.39.3",
+    "react-virtuoso": "^4.12.5",
+    "reactflow": "^11.11.4",
+    "recharts": "^2.15.1",
+    "rehype-slug": "^6.0.0",
+    "socket.io-client": "^4.8.1",
+    "storybook": "^8.4.1",
+    "tailwind-merge": "^2.6.0",
+    "tw-animate-css": "^1.2.4",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
+    "@storybook/addon-essentials": "^8.4.1",
+    "@storybook/addon-interactions": "^8.4.1",
+    "@storybook/addon-onboarding": "^8.4.1",
+    "@storybook/blocks": "^8.4.1",
+    "@storybook/nextjs": "^8.4.1",
+    "@storybook/react": "^8.4.1",
+    "@storybook/test": "^8.4.1",
+    "@swc/jest": "^0.2.37",
+    "@tailwindcss/postcss": "^4.0.14",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/negotiator": "^0.6.3",
+    "@types/node": "^20.17.5",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^4.0.14",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
+  }
 }
