--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,7 +1,7 @@
 # Authentication Settings
 BETTER_AUTH_SECRET=zy7YSG2GCtfAIHqZkxz2EhiJs0leXCXD
 BETTER_AUTH_URL=http://localhost:4000
-BETTER_AUTH_TRUSTED_ORIGINS="http://localhost:3000"
+BETTER_AUTH_TRUSTED_ORIGINS=http://localhost:3000
 ENABLE_SWAGGER=true
 
 # Google Client Settings
@@ -41,4 +41,4 @@ S3_DEVELOPMENT_ENDPOINT=http://localhost:4566
 
 # Python Server
 MAX_RETRY_COUNT=3
-PYTHON_SERVER_URL=http://host.docker.internal:8000
+PYTHON_SERVER_URL=http://ai-service:8000
