--- a/apps/ai-service/Dockerfile
+++ b/apps/ai-service/Dockerfile
@@ -11,27 +11,26 @@ RUN apt-get update && apt-get install -y \
 # Set working directory
 WORKDIR /app
 
-# Copy app requirements first
+# Copy the application requirements
 COPY requirements.txt .
 
-# Install app dependencies
+# Install dependencies (for both the app and system-wide)
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application
 COPY . .
-
-# Clone YOLOv5 *after* copying project to prevent overwrite
+# Clone YOLOv5 after copying project to prevent overwrite
 RUN git clone https://github.com/ultralytics/yolov5 app/services/model/yolov5
 
-# Set up venvs
-RUN python -m venv /app/yolov5_venv && \
-    /app/yolov5_venv/bin/pip install --no-cache-dir -r /app/app/services/model/yolov5/requirements.txt && \
-    python -m venv /app/yolov8_venv && \
-    /app/yolov8_venv/bin/pip install ultralytics==8.2.103 && \
-    python -m venv /app/yolov11_venv && \
-    /app/yolov11_venv/bin/pip install "ultralytics<=8.3.40" supervision roboflow
+# # Set up virtual environments and install dependencies
+# RUN python -m venv /app/yolov5_venv && \
+#     /app/yolov5_venv/bin/pip install --no-cache-dir -r /app/app/services/model/yolov5/requirements.txt && \
+#     python -m venv /app/yolov8_venv && \
+#     /app/yolov8_venv/bin/pip install --no-cache-dir ultralytics==8.2.103 && \
+#     python -m venv /app/yolov11_venv && \
+#     /app/yolov11_venv/bin/pip install --no-cache-dir "ultralytics<=8.3.40" supervision roboflow
 
-# Expose FastAPI app port
+
+# Expose the FastAPI app port
 EXPOSE 80
 
 # Start the FastAPI app
