fix: package version

--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -1,29 +1,36 @@
-# Step 1: Build the application
-FROM node:23-alpine AS builder
-
+FROM node:20-alpine AS builder
 WORKDIR /app
 
-RUN apk add --no-cache gcompat
+ENV NODE_ENV=production
 
+# Install deps separately to improve caching
 COPY package.json package-lock.json ./
 RUN npm ci
 
+# Copy rest of the code and build
 COPY . .
 RUN npm run build
 
-# Step 2: Run the production server
-FROM node:23-alpine AS runner
-
+# Stage 2: Production image
+FROM node:20-alpine AS runner
 WORKDIR /app
 
-# Only copy necessary files
+ENV NODE_ENV=production
+
+# Only install production deps
+COPY package.json package-lock.json ./
+RUN npm ci --omit=dev
+
+# Copy build output and necessary files
 COPY --from=builder /app/.next .next
 COPY --from=builder /app/public public
-COPY --from=builder /app/package.json package.json
-COPY --from=builder /app/node_modules node_modules
-
-ENV NODE_ENV=production
-ENV NEXT_TELEMETRY_DISABLED=1
+COPY --from=builder /app/next.config.js .
+COPY --from=builder /app/tsconfig.json .
+COPY --from=builder /app/pages pages
+COPY --from=builder /app/app app
+COPY --from=builder /app/styles styles
+COPY --from=builder /app/components components
+COPY --from=builder /app/utils utils
 
 EXPOSE 3000
 
