--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -2,11 +2,11 @@ FROM oven/bun AS build
 
 WORKDIR /app
 
+# Cache packages installation
 COPY package.json package.json
-RUN apt update && apt install python3 python3-pip make g++ -y
 COPY bun.lockb bun.lockb
 
-RUN bun install
+RUN bun install --production --frozen-lockfile
 
 COPY . .
 
@@ -16,18 +16,23 @@ RUN bun build \
 	--compile \
 	--minify-whitespace \
 	--minify-syntax \
+  --external pg \
 	--target bun \
 	--outfile server \
 	./src/index.ts
 
-FROM gcr.io/distroless/base
+RUN chmod +x server
+
+FROM alpine:latest AS runner
+
+COPY --from=build /app/server /app/server
 
 WORKDIR /app
-
-COPY --from=build /app/server server
+RUN ls -a
+RUN file server && ls -l server
 
 ENV NODE_ENV=production
 
-CMD ["./server"]
+EXPOSE 3000
 
-EXPOSE 4000
+CMD ["./server"]
