--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"test": "bun test",
 		"dev": "bun run --hot src/index.ts",
-		"build": "bun build src/index.ts --target bun --outdir ./dist",
+		"build": "bun build --compile --minify-whitespace --minify-syntax --external pg --target bun --outfile server ./src/index.ts",
 		"generate:auth": "bunx @better-auth/cli@latest generate",
 		"studio": "drizzle-kit studio",
 		"generate": "drizzle-kit generate",
@@ -22,15 +22,15 @@
 		"@elysiajs/static": "^1.2.0",
 		"@elysiajs/swagger": "^1.2.2",
 		"@neondatabase/serverless": "^0.9.5",
-		"@testcontainers/postgresql": "^10.24.2",
-		"amqplib": "^0.10.7",
-		"axios": "^1.8.4",
+		"@testcontainers/postgresql": "^10.25.0",
+		"amqplib": "^0.10.8",
+		"axios": "^1.9.0",
 		"better-auth": "^1.2.7",
 		"drizzle-kit": "^0.30.6",
 		"drizzle-orm": "^0.38.4",
 		"drizzle-typebox": "^0.3.2",
-		"elysia": "latest",
-		"pg": "^8.14.1",
+		"elysia": "^1.2.25",
+		"pg": "^8.15.6",
 		"pino-elasticsearch": "^8.1.0",
 		"pino-pretty": "^11.3.0",
 		"pino-roll": "^2.2.0",
@@ -38,12 +38,12 @@
 		"redis": "^4.7.0",
 		"sharp": "^0.33.5",
 		"uuid": "^11.1.0",
-		"zod": "^3.24.3"
+		"zod": "^3.24.4"
 	},
 	"devDependencies": {
 		"@better-auth-kit/tests": "^0.1.3",
 		"@types/amqplib": "^0.10.7",
-		"@types/pg": "^8.11.13",
+		"@types/pg": "^8.15.0",
 		"better-sqlite3": "^11.9.1",
 		"bun-types": "latest"
 	},
