--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,9 +15,9 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
-  postgres:
+  postgres_prod:
     image: postgres:17-alpine
-    user: "user"
+    container_name: postgres-prod
     restart: always
     ports:
       - 5432:5432
@@ -34,8 +34,9 @@ services:
       timeout: 5s
       retries: 5
   
-  rabbitmq:
+  rabbitmq_prod:
     image: rabbitmq:4-management-alpine
+    container_name: rabbitmq-prod
     ports:
       - 5672:5672
       - 15672:15672
@@ -51,16 +52,17 @@ services:
       timeout: 5s
       retries: 5
 
-  redis:
+  redis_prod:
     image: redis:6.2.5-alpine
+    container_name: redis-prod
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
   
-  localstack:
-    container_name: localstack
+  localstack_prod:
+    container_name: localstack_prod
     image: localstack/localstack:latest
     ports:
       - "4566:4566"
@@ -76,10 +78,11 @@ services:
       - "${LOCALSTACK_VOLUME_DIR:-./localstack}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
 
-  aws-cli:
+  aws-cli_prod:
     image: amazon/aws-cli
+    container_name: aws-cli_prod
     depends_on:
-      localstack:
+      localstack_prod:
         condition: service_healthy
     volumes:
       - ./images:/aws
@@ -90,8 +93,8 @@ services:
     entrypoint: /bin/sh
     command: -c "sh /aws/upload-images.sh"
 
-  ai-service:
-    container_name: ai_service
+  ai-service_prod:
+    container_name: ai_service_prod
     profiles:
       - ""
       - python
@@ -104,28 +107,27 @@ services:
       - "8000:8000"
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
 
-  backend_app:
+  backend_app_prod:
+    container_name: backend_prod
     profiles:
-      - ""
       - backend
+      - ""
     build:
       context: ./apps/backend
       dockerfile: Dockerfile
     env_file: apps/backend/.env
-    volumes:
-      - ./apps/backend:/app
-      - /app/apps/backend/node_modules
     ports:
       - 4000:4000 
-    depends_on:
-      postgres:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
+    # depends_on:
+    #   postgres_prod:
+    #     condition: service_healthy
+    #   rabbitmq_prod:
+    #     condition: service_healthy
+    #   redis_prod:
+    #     condition: service_healthy
 
-  frontend_app:
+  frontend_app_prod:
+    container_name: frontend_prod
     profiles:
       - ""
       - frontend
@@ -139,10 +141,7 @@ services:
       - ./apps/frontend:/app
       - /app/apps/frontend/node_modules
       - /app/apps/frontend/.next
-    deploy:
-      mode: replicated
-      replicas: 3
     ports:
       - 3000:3000
     depends_on:
-      - backend_app
+      - backend_app_prod
