feat: realtime log complete

--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -30,6 +30,8 @@ RABBITMQ_TRAINING_QUEUE_NAME=training_queue
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB_INDEX=0
+REDIS_LOG_INDEX=1
+REDIS_LOG_CHANNEL=training-logs
 
 # S3 Bucket
 AWS_ACCESS_KEY_ID=test
